--- a/Assests/contactUs.html
+++ b/Assests/contactUs.html
@@ -48,24 +48,20 @@
                  <!-- the form starts from here -->
                  <div class="form">
                     <form action="sendEmail.php" method="post">
-                       <span><label for="name">Name:</label></span>
-                       <input  type="text" name="name" id="name" onkeyup="nameValidation();" placeholder="eg. First Last" required>
+                       <p><span><label for="name">Name:</label></span> </p>
+                       <input class="input" type="text" name="name" id="name" onkeyup="nameValidation();" placeholder="eg. First Last" required>
                        <p><span id="nameError"></span></p>
-
-                       <span><label for="phone">Phone:</label></span>
-                       <input type="text "name="phone"id="phone" onkeyup="phoneValidation();"placeholder="eg.0450 442 424" required>
-                       <p></p><span id="phoneError"></span></p>
-
-                       <span><label for="email">Email:</label></span>
-                       <input type="email" name="email" onkeyup="emailValidation();" id="email"placeholder="your email please" required>
+                       <p><span><label for="phone">Phone:</label></span></p>
+                       <input class="input" type="text "name="phone"id="phone" onkeyup="phoneValidation();"placeholder="eg. 0450 442 424" required> 
+                       <p><span id="phoneError"></span></p>
+                       <p><span><label for="email">Email:</label></span></p>
+                       <input  class="input" type="email" name="email" onkeyup="emailValidation();" id="email"placeholder="your email please" required>
                        <p><span id="emailError"></span></p>
-
-                      <p> <span><label for="message">Message:</label></span></p>
+                       <p><span><label for="message">Message:</label></span></p>
                        <textarea  name="message" onkeyup="messageValidation();" id="message" rows="10"cols="32"></textarea>
                        <p><span id="msg"></span></p>
                        <div class="submit-button">
                           <p><input class="contact-btn"type="submit"name="submit" id="submit"value="submit"></p>
-                          <br>
                           <p>By pressing the submit button you will agree to our <span><a href="#">terms and policies</a></span></p>
                        </div>
                        
@@ -86,7 +82,7 @@
                                  
                                   <div class="map">
 
-                                      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d402565.8637873003!2d144.32139118423234!3d-37.97606020334869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1551786581252" width="400" height="253" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d402565.8637873003!2d144.32139118423234!3d-37.97606020334869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1551786581252" width="400" height="358" frameborder="0" style="border:0" allowfullscreen></iframe>
                                   </div>
                                   <!-- map finishes here -->
                                   <br><br>
