--- a/Assests/aboutUs.html
+++ b/Assests/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>AboutUs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
@@ -43,7 +43,7 @@
   <!-- Our History and the Link Starts here -->
       <div class="row">
           <div class="col-8">
-              <div class="card shadow">
+              <div class="card">
                   <div class="card-body">
                     <h1>Our History</h1>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -67,7 +67,7 @@
 
           <!-- the links -->
           <div class="col-4">
-              <div class="card shadow" style="width: 18rem;">
+              <div class="card" style="width: 18rem;">
                   <div class="card-body">
                     <h4 class="card-title font-weight-bold">CATEGORIES</h4>
                     <ul>
@@ -89,7 +89,7 @@
   <!-- our History and Link finishes here -->
 
     <!-- about us part starts here -->
-      <div class="about  shadow bg-light">
+      <div class="about bg-light">
           <div class="container">
                   <div class=" grid-2">
                           <div class="center">
