--- a/Assests/services.html
+++ b/Assests/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Services</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
@@ -56,7 +56,7 @@
             </div>
               <div class="row justify-content-center">
                   <div class="col-md-4">
-                      <div class="card shadow text-center" style="width: 18rem;">
+                      <div class="card text-center" style="width: 18rem;">
                           <div class="inner">
                                   <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                           </div>
@@ -70,7 +70,7 @@
                   </div>
 
                   <div class="col-md-4">
-                      <div class="card shadow text-center" style="width: 18rem;">
+                      <div class="card  text-center" style="width: 18rem;">
                           <div class="inner">
                                   <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                           </div>
@@ -84,7 +84,7 @@
                   </div>
                   <!-- end of second card -->
                   <div class="col-md-4">
-                      <div class="card shadow text-center" style="width: 18rem;">
+                      <div class="card  text-center" style="width: 18rem;">
                           <div class="inner">
                                   <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                           </div>
