fixed the bugs and made it responsive

--- a/Assests/index.html
+++ b/Assests/index.html
@@ -43,7 +43,7 @@
         <!-- this is the main container which has the picture and the title inside it -->
         <div class="content">
             <img class="logo"src="" alt=" the logo picture goes here">
-            <div class="title">Welcome to GTS Tiling</div>
+            <div class="title">Welcome to S&G Tiling</div>
             <div class="text"> <h3>Where we offer the best services and great customer satisfaction</h3></div>
         </div>
     </header>
