responsiveness is fixed for all pages.

--- a/Assests/aboutUs.html
+++ b/Assests/aboutUs.html
@@ -67,7 +67,7 @@
 
           <!-- the links -->
           <div class="col-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card">
                   <div class="card-body">
                     <h4 class="card-title font-weight-bold">CATEGORIES</h4>
                     <ul>
@@ -117,7 +117,11 @@
         <p> logo &copy; 2019 </p>
         <P>ABN: #### #### ####</P>
         <p>contact No:</p>
-        <p>follow us on social Media: </p>
+        <p>follow us on social Media:
+            <a href="#"> <i id="insta" class="fab fa-instagram"></i> </a>
+            <a href="#"> <i id="twit" class="fab fa-twitter-square"></i> </a>
+            <a href="#">  <i id="face" class="fab fa-facebook-square"></i></a>
+          </p>
     </footer>
 
 </body>
