--- a/Assests/index.html
+++ b/Assests/index.html
@@ -76,7 +76,7 @@
         <div class="row justify-content-center">
            
             <div class="col-md-4">
-                <div class="card shadow text-center" style="width: 21rem;">
+                <div class="card shadow text-center" >
                     <div class="inner">
                             <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                     </div>
@@ -89,7 +89,7 @@
                   </div>
             </div>
             <div class="col-md-4">
-                <div class="card shadow text-center" style="width: 21rem;">
+                <div class="card shadow text-center" >
                    <div class="inner">
                         <img class="card-img-top" src="/Media/stone.jpg" alt="Card image cap">
                    </div>
@@ -101,7 +101,7 @@
                   </div>
             </div>
             <div class="col-md-4">
-                <div class="card shadow text-center" style="width: 21rem;">
+                <div class="card shadow text-center" >
                    <div class="inner">
                         <img class="card-img-top" src="/Media/wall.jpg" alt="Card image cap">
                    </div>
@@ -130,7 +130,12 @@
         <p> logo &copy; 2019 </p>
         <P>ABN: #### #### ####</P>
         <p>contact No:</p>
-        <p>follow us on social Media: </p>
+        <p>follow us on social Media:
+          <a href="#"> <i id="insta" class="fab fa-instagram"></i> </a>
+          <a href="#"> <i id="twit" class="fab fa-twitter-square"></i> </a>
+          <a href="#">  <i id="face" class="fab fa-facebook-square"></i></a>
+        </p>
+       
     </footer>
 
 </body>
