--- a/Assests/contactUs.html
+++ b/Assests/contactUs.html
@@ -90,7 +90,11 @@
         <p> logo &copy; 2019 </p>
         <P>ABN: #### #### ####</P>
         <p>contact No:</p>
-        <p>follow us on social Media: </p>
+        <p>follow us on social Media:
+            <a href="#"> <i id="insta" class="fab fa-instagram"></i> </a>
+            <a href="#"> <i id="twit" class="fab fa-twitter-square"></i> </a>
+            <a href="#">  <i id="face" class="fab fa-facebook-square"></i></a>
+          </p>
     </footer>
 
 </body>
