--- a/Assests/services.html
+++ b/Assests/services.html
@@ -56,7 +56,7 @@
             </div>
               <div class="row justify-content-center">
                   <div class="col-md-4">
-                      <div class="card text-center" style="width: 21rem;">
+                      <div class="card text-center">
                           <div class="inner">
                                   <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                           </div>
@@ -70,7 +70,7 @@
                   </div>
 
                   <div class="col-md-4">
-                      <div class="card  text-center" style="width: 21rem;">
+                      <div class="card  text-center">
                           <div class="inner">
                                   <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                           </div>
@@ -84,7 +84,7 @@
                   </div>
                   <!-- end of second card -->
                   <div class="col-md-4">
-                      <div class="card  text-center" style="width: 21rem;">
+                      <div class="card  text-center">
                           <div class="inner">
                                   <img class="card-img-top" src="/Media/floor.jpg" alt="Card image cap">
                           </div>
@@ -112,7 +112,11 @@
         <p> logo &copy; 2019 </p>
         <P>ABN: #### #### ####</P>
         <p>contact No:</p>
-        <p>follow us on social Media: </p>
+        <p>follow us on social Media:
+            <a href="#"> <i id="insta" class="fab fa-instagram"></i> </a>
+            <a href="#"> <i id="twit" class="fab fa-twitter-square"></i> </a>
+            <a href="#">  <i id="face" class="fab fa-facebook-square"></i></a>
+          </p>
     </footer>
 
 </body>
