--- a/Assests/index.html
+++ b/Assests/index.html
@@ -131,9 +131,9 @@
         <P>ABN: #### #### ####</P>
         <p>contact No:</p>
         <p>follow us on social Media:
-          <a href="#"> <i id="insta" class="fab fa-instagram"></i> </a>
-          <a href="#"> <i id="twit" class="fab fa-twitter-square"></i> </a>
-          <a href="#">  <i id="face" class="fab fa-facebook-square"></i></a>
+          <a href="#"> <i id="insta" class="fab fa-instagram fa-2x"></i> </a>
+          <a href="#"> <i id="twit" class="fab fa-twitter-square fa-2x"></i> </a>
+          <a href="#">  <i id="face" class="fab fa-facebook-square fa-2x"></i></a>
         </p>
        
     </footer>
