added a javaScript file for aboutUs page

--- a/Assests/aboutUs.html
+++ b/Assests/aboutUs.html
@@ -99,7 +99,7 @@
           <div class="container">
                   <div class=" grid-2">
                           <div class="center">
-                              <img src="/Media/floor.jpg" alt="">
+                              <img id="pic"src="/Media/floor.jpg" alt="differnt pictures here">
                           </div>
                           <div>
                               <h3>Our Services</h3>
