--- a/Assests/contactUs.html
+++ b/Assests/contactUs.html
@@ -89,7 +89,7 @@
         <script src="/Libs/scripts/contact.js"></script>
         <p> logo &copy; 2019 </p>
         <P>ABN: #### #### ####</P>
-        <p>contact No:</p>
+        <p>contact No: 0412 455 455</p>
         <p>follow us on social Media:
             <a href="#"> <i id="insta" class="fab fa-instagram"></i> </a>
             <a href="#"> <i id="twit" class="fab fa-twitter-square"></i> </a>
